add SessionManager